add-opens for presto-parquet